# windows-lab

WindowsExample/: Cargo.toml  register.cmd
WindowsExample/appx/: AppxManifest.xml
WindowsExample/src/: main.rs
